# numerologo-py

./: numerologo_app.spec  pyproject.toml
src/numerologo_py/: numerologo.py  numerologo_app.py  numerologo_app.tcss  textos.py
