[project]
name = "numerologo-py"
version = "0.1.0"
description = ""
authors = [
    {name = "Guto Marcicano",email = "caugmar@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "textual (>=6.6.0,<7.0.0)",
    "markdownify (>=1.2.2,<2.0.0)"
]

[tool.poetry]
packages = [{include = "numerologo_py", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pyinstaller (>=6.16.0,<7.0.0)",
    "textual-dev (>=1.8.0,<2.0.0)",
    "ipython (>=9.7.0,<10.0.0)"
]
